<resources>
    <string name="app_name">Login Page</string>
    <string name="app_name2">Create Account Page</string>
    <string name="app_name3">Logged In</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="login_page">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="link_to_register">Not a Member? Sign Up Now!</string>
    <string name="create_account">Create Account</string>
    <string name="register_account">Register Account</string>
    <string name="min_6_characters">min 6 characters</string>
    <string name="example">example@example.com</string>
    <string name="university">University</string>
    <string name="done">Done</string>
    <string name="you_are_login">You are login</string>
    <string name="congratulation">Congratulation!</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Log Out!</string>
</resources>
