<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginHandler">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:id="@+id/textCreateAccount"
            android:textColor="#fbffffff"
            android:background="#cc000000"/>

        <!--  Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page"
            android:id="@+id/textMessage"
            android:textSize="20sp"
            android:layout_marginTop="10sp"/>

        <!--  Set Email  -->
        <TextView
            android:text="@string/email"
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="bottom"
            android:textSize="20sp"
            android:textColor="#fb000000"
            android:layout_marginTop="40sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:ems="10"
            android:id="@+id/editEmail" />

        <!--  Set Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textPassword"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="bottom"
            android:textColor="#fb000000"
            android:layout_marginTop="40sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:ems="10"
            android:id="@+id/editPassword" />

        <!--  Login Button -->

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/buttonLogin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40sp"/>

        <!--  Link to register Button -->
        <Button
            android:id="@+id/buttonToRegisterPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:text="@string/link_to_register"
            android:textAllCaps="false"
            android:textColor="#fb000000"
            android:textSize="15sp"/>

    </LinearLayout>
</RelativeLayout>